--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,46 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    	
-    <wb-module deploy-name="sample-ear">
-        		
-        <wb-resource deploy-path="/" source-path="src/main/application"/>
-        <wb-resource deploy-path="/" source-path="/src/main/application"/>
-        		
-        <dependent-module deploy-path="/" handle="module:/resource/ejb/ejb">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        		
-        <dependent-module deploy-path="/" handle="module:/resource/web/web">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        		
-        <dependent-module deploy-path="/" handle="module:/resource/web2/web2">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        		
-        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.commons\commons-lang3\3.12.0\c6842c86792ff03b9f1d1fe2aab8dc23aa6c6f0e\commons-lang3-3.12.0.jar">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        		
-        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.logging.log4j\log4j-core\2.18.0\7c1882ede137548925eadb750615edab2f6e13c\log4j-core-2.18.0.jar">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        		
-        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.logging.log4j\log4j-api\2.18.0\c72ad9b1d8d42e4ea7befd8248bf05877af4c63d\log4j-api-2.18.0.jar">
-            			
-            <dependency-type>uses</dependency-type>
-            		
-        </dependent-module>
-        	
-    </wb-module>
-    
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
+	<wb-module deploy-name="sample-ear">
+		<wb-resource deploy-path="/" source-path="src/main/application"/>
+		<wb-resource deploy-path="/" source-path="/src/main/application"/>
+		<dependent-module deploy-path="/" handle="module:/resource/ejb/ejb">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+		<dependent-module deploy-path="/" handle="module:/resource/web/web">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+		<dependent-module deploy-path="/" handle="module:/resource/web2/web2">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+		<dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.commons\commons-lang3\3.12.0\c6842c86792ff03b9f1d1fe2aab8dc23aa6c6f0e\commons-lang3-3.12.0.jar">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+		<dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.logging.log4j\log4j-core\2.14.0\e257b0562453f73eabac1bc3181ba33e79d193ed\log4j-core-2.14.0.jar">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+		<dependent-module deploy-path="/lib" handle="module:/classpath/lib/C:\Users\kengo\.gradle\caches\modules-2\files-2.1\org.apache.logging.log4j\log4j-api\2.14.0\23cdb2c6babad9b2b0dcf47c6a2c29d504e4c7a8\log4j-api-2.14.0.jar">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
+	</wb-module>
 </project-modules>
